--- a/BookReading/Book_UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
+++ b/BookReading/Book_UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Xxm-KL-1eX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IY3-HR-fjS">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -86,7 +86,6 @@
         <!--Cover Flow Layout View Controller-->
         <scene sceneID="hpL-Qy-kdO">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fmu-VN-cx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <collectionViewController id="Xxm-KL-1eX" customClass="CoverFlowLayoutViewController" customModule="Book_UICollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="UuW-Zb-Q3Z">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -99,7 +98,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ghx-xr-w9r">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -113,9 +112,24 @@
                             <outlet property="delegate" destination="Xxm-KL-1eX" id="a2f-jt-9mi"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="gss-58-tgI">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="65r-sc-iXK">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Boring"/>
+                                <segment title="Cover"/>
+                            </segments>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="layoutChangeSegmentedControl" destination="65r-sc-iXK" id="cIm-T5-RnO"/>
+                    </connections>
                 </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fmu-VN-cx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-58" y="-443"/>
+            <point key="canvasLocation" x="754" y="-443"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="M4Q-3d-NBg">
@@ -134,6 +148,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="teF-XL-GyF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-58" y="-1184"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Bsm-Cs-M6U">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IY3-HR-fjS" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vv3-AR-oFU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Xxm-KL-1eX" kind="relationship" relationship="rootViewController" id="ZNn-aL-sdv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FOr-I1-Kol" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-58" y="-443"/>
         </scene>
     </scenes>
 </document>
