--- a/BookReading/Book_UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
+++ b/BookReading/Book_UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IY3-HR-fjS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="alH-rb-ebK">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -131,6 +131,64 @@
             </objects>
             <point key="canvasLocation" x="754" y="-443"/>
         </scene>
+        <!--Circle And Flow Collection View Controller-->
+        <scene sceneID="NSC-vR-Bqj">
+            <objects>
+                <collectionViewController id="w8s-pu-skP" customClass="CircleAndFlowCollectionViewController" customModule="Book_UICollectionView" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="oP1-KT-LZ1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4D5-JU-0b7">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="vzI-jU-mGP">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="w8s-pu-skP" id="odZ-a9-8g6"/>
+                            <outlet property="delegate" destination="w8s-pu-skP" id="rck-AA-ogp"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="x6G-KH-qyc">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="S3d-bw-FqB">
+                            <connections>
+                                <action selector="addItem:" destination="w8s-pu-skP" id="t7z-mV-LUg"/>
+                            </connections>
+                        </barButtonItem>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="7Kf-wd-WRk">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Circle"/>
+                                <segment title="Flow"/>
+                            </segments>
+                            <connections>
+                                <action selector="layoutChangeSegmentedControlDidChangeValue:" destination="w8s-pu-skP" eventType="valueChanged" id="IGv-gI-cQX"/>
+                            </connections>
+                        </segmentedControl>
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="cnd-JB-YCw">
+                            <connections>
+                                <action selector="deleteItem:" destination="w8s-pu-skP" id="Toa-bR-zKy"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ubj-Ug-foS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="754" y="238"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="M4Q-3d-NBg">
             <objects>
@@ -166,6 +224,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FOr-I1-Kol" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-58" y="-443"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Fer-ap-i1l">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="alH-rb-ebK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EfO-Kg-8wh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="w8s-pu-skP" kind="relationship" relationship="rootViewController" id="oov-fq-hEC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rGo-o2-YGV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-58" y="250"/>
         </scene>
     </scenes>
 </document>
