--- a/Demo_testUI/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
+++ b/Demo_testUI/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="ipad10_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,16 +18,21 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="433-7A-h5M" customClass="TransformView" customModule="Demo_testUI" customModuleProvider="target">
-                                <rect key="frame" x="79" y="135" width="242" height="316"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="433-7A-h5M" customClass="TransformView" customModule="Demo_testUI" customModuleProvider="target">
+                                <rect key="frame" x="83" y="135" width="693" height="761"/>
                                 <color key="backgroundColor" red="0.43987358710000002" green="1" blue="0.24389161049999999" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="433-7A-h5M" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="115" id="67V-EZ-R6F"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="433-7A-h5M" secondAttribute="bottom" constant="216" id="Dm7-Fd-Kqo"/>
+                            <constraint firstItem="433-7A-h5M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="63" id="JTv-Rh-YCV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="433-7A-h5M" secondAttribute="trailing" constant="38" id="Jby-Ss-oob"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="transformView" destination="433-7A-h5M" id="0Fy-bG-GZk"/>
