--- a/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
+++ b/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,9 +22,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHR-QE-dU6" customClass="CardTagView" customModule="Demo_testUI" customModuleProvider="target">
-                                <rect key="frame" x="125" y="278" width="584" height="556"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHR-QE-dU6" customClass="FlowerView" customModule="Demo_testUI" customModuleProvider="target">
+                                <rect key="frame" x="139" y="278" width="556" height="556"/>
+                                <color key="backgroundColor" red="0.99782079459999995" green="0.95751076940000002" blue="0.6121886969" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="IHR-QE-dU6" secondAttribute="height" multiplier="1:1" id="iM5-fV-g7f"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -31,7 +35,6 @@
                             <constraint firstItem="IHR-QE-dU6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7we-2P-PgI"/>
                             <constraint firstItem="IHR-QE-dU6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ouh-Bf-tXY"/>
                             <constraint firstItem="IHR-QE-dU6" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="WRP-25-yMe"/>
-                            <constraint firstItem="IHR-QE-dU6" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="qAK-SM-tYL"/>
                         </constraints>
                     </view>
                 </viewController>
