--- a/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
+++ b/DemoTests/Demo_testUI/supportingFiles/Base.lproj/Main.storyboard
@@ -22,21 +22,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHR-QE-dU6" customClass="FlowerView" customModule="Demo_testUI" customModuleProvider="target">
-                                <rect key="frame" x="139" y="278" width="556" height="556"/>
-                                <color key="backgroundColor" red="0.99782079459999995" green="0.95751076940000002" blue="0.6121886969" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mrK-LM-K94">
+                                <rect key="frame" x="208.5" y="347.5" width="417" height="417"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="IHR-QE-dU6" secondAttribute="height" multiplier="1:1" id="iM5-fV-g7f"/>
+                                    <constraint firstAttribute="width" secondItem="mrK-LM-K94" secondAttribute="height" multiplier="1:1" id="5Kq-6g-aII"/>
                                 </constraints>
-                            </view>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="IHR-QE-dU6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7we-2P-PgI"/>
-                            <constraint firstItem="IHR-QE-dU6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ouh-Bf-tXY"/>
-                            <constraint firstItem="IHR-QE-dU6" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="WRP-25-yMe"/>
+                            <constraint firstItem="mrK-LM-K94" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="A3Q-W8-8m6"/>
+                            <constraint firstItem="mrK-LM-K94" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="Yfz-ya-Pom"/>
+                            <constraint firstItem="mrK-LM-K94" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tOn-LN-JtG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="mrK-LM-K94" id="3w4-13-VZe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
